# jerk_optimal_velocity_planning

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  FindNLOPT.cmake  README.md  main.cpp  main_nonconvex.cpp  main_pseudo.cpp
include/: filter.h  interpolate.h  max_velocity_filter.h  obstacle.h  optimizer.h  qp_interface.h  scenario_generator.h  utils.h
include/solver/: base_solver.h  lp_solver_gurobi.h  lp_solver_osqp.h  nc_solver_nlopt.h  qp_solver_gurobi.h  qp_solver_osqp.h
include/solver/osqp_interface/: csc_matrix_conv.h  osqp_interface.h
include/solver/solver_interface/: osqp_interface.h
include/solver_interface/: csc_matrix_conv.h
media/: cut_in.eps  stopping.eps  vehicle_following.eps
result/: obs.csv  optimization_result.csv
result/filter_qp/: qp_result.csv  reference_velocity.csv
result/nonconvex_jerk/: nc_result.csv  obs_filtered.csv  reference_velocity.csv  st_graph.csv
result/pseudo_jerk/: qp_result.csv
script/: obs_visualize.py  visualize.py  visualize_experiments.py  visualize_filtered_velocity.py  visualize_st.py
script/filter_qp/: obs_visualize.py  visualize.py  visualize_experiments.py  visualize_jerk_filter.py  visualize_st.py
script/nonconvex_jerk/: nc_visuzlize.py
script/pseudo_jerk/: pseudo_compare.py
src/: filter.cpp  interpolate.cpp  max_velocity_filter.cpp  obstacle.cpp  optimizer.cpp  qp_interface.cpp  scenario_generator.cpp  utils.cpp
src/solver/: lp_solver_gurobi.cpp  lp_solver_osqp.cpp  nc_solver_nlopt.cpp  qp_solver_gurobi.cpp  qp_solver_osqp.cpp
src/solver/osqp_interface/: csc_matrix_conv.cpp  osqp_interface.cpp
src/solver/solver_interface/: csc_matrix_conv.cpp  osqp_interface.cpp
src/solver_interface/: csc_matrix_conv.cpp  osqp_interface.cpp
